# Jane-Street-Time-Series-Forecasting

./: .gitignore  README.md  README_storage.md  demo_miniwindowdataset.py  feature_decorr.ipynb  filter_feats_from_lgbm.ipynb  final_feature_importance_train_range900_1698__cv2_g7_r4.csv  gitflow.md  main.ipynb  metrics_wr2.py  model_training_keys.md  monitor.md  play.ipynb  pyproject.toml  python_demo.py  requirements.txt  run_0_clean.py  run_1_fe.py  run_2_memmap_fs.py  run_2_panel.py  run_3_feature_selection.py  run_3_memmap_fs.py  run_4_feature_selection.py  run_4_memmap_after_fs.py  run_5_memmap_after_fs.py  run_5_tune.py  run_6_tune_fixed.py  run_clean.py  run_fe.py  run_feature_select.py  run_memmap.py  run_model.py  tb.out  temp.ipynb  test.py  tft.ipynb  tft.py  tft_short_rmse.ipynb  tft_short_rmse.py  tft_with_selected_fs.ipynb  (+2 more)
config/: config.yaml  data.yaml
experiments/tft/: v_baseline_top100.ipynb
learning/: demo_miniwindowdataset.py  demo_miniwindowdataset_multiseries.py  mini_metric.py  mini_tft_step1.py  mini_tft_step11.py  mini_tft_step12.py  mini_tft_step13.py  mini_tft_step15.py  mini_tft_step2.py  mini_tft_step3.py  mini_tft_step4.py  mini_tft_step5.py  mini_tft_step7.py  mini_tft_step9.py
lightning_logs/version_0/: events.out.tfevents.1759922762.vm-ml-test.3689597.0  (+6 more)
note/: git_workflow.md  model_training_keys.md  practical_cmd.md
notebooks/: eda.ipynb  eda_x.ipynb  missing_heatmap.html
pipeline/: assemble.py  features.py  io.py  memmap.py  preprocess.py  validate.py
reports/: features__fs__1400-1698__cv1-g7-r4__seed42__top1000__1761771286.txt  summary_train_range900_1698__cv2_g7_r4.json
tutorial/: demand_forecasting.ipynb
(+221 files in other folders)
